[package]
name = "kernel"
version = "0.1.0"
edition = "2024"
resolver = "2"

[lib]
name = "kernel"
crate-type = ["staticlib"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"
panic = "abort"

[profile.dev]
lto = "fat"
codegen-units = 1
opt-level = "s"
panic = "abort"

[dependencies]
cortex-m = "0.7.7"
critical-section = "1.2.0"
cty = "0.2.2"
embedded-hal = "1.0.0"
fugit = "0.3.9"
generic-array = "1.3.5"
heapless = "0.9.2"
littlefs2 = "0.6.1"
pico_pll_config = "0.1.3"
rp235x-hal = { git = "https://github.com/NicViviers/rp-hal", features = ["rt", "critical-section-impl"] }
rp235x-pac = "0.1.0"
spin = "0.10.0"
libm = "0.2.16"

[patch.crates-io]
rp235x-pac = { git = "https://github.com/NicViviers/rp235x-pac", branch = "main" }

# [patch.crates-io]
# rp235x-pac = { git = "https://github.com/rp-rs/rp235x-pac", branch = "main" }

[build-dependencies]
bindgen = "0.72.1"
walkdir = "2.5"
